# swh-core

./: .copier-answers.yml  .copyright-updater.yaml  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS  MANIFEST.in  Makefile.local  PKG-INFO  README.md  README.rst  conftest.py  mypy.ini  pyproject.toml  pytest.ini  requirements-db-pytestplugin.txt  requirements-db.txt  requirements-github.txt  requirements-http.txt  requirements-logging.txt  requirements-test-db.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  swh-core_0.0.1.orig.tar.gz.delta  swh-core_0.0.1.orig.tar.gz.id  swh-core_0.0.10.orig.tar.gz.delta  swh-core_0.0.10.orig.tar.gz.id  swh-core_0.0.11.orig.tar.gz.delta  swh-core_0.0.11.orig.tar.gz.id  swh-core_0.0.12.orig.tar.gz.delta  swh-core_0.0.12.orig.tar.gz.id  swh-core_0.0.13.orig.tar.gz.delta  swh-core_0.0.13.orig.tar.gz.id  swh-core_0.0.14.orig.tar.gz.delta  swh-core_0.0.14.orig.tar.gz.id  swh-core_0.0.15.orig.tar.gz.delta  swh-core_0.0.15.orig.tar.gz.id  swh-core_0.0.16.orig.tar.gz.delta  (+327 more)
debian/: changelog  control  copyright  gbp.conf  pybuild.testfiles  rules
docs/: Makefile  cli.rst  config.md  db.rst  index.rst
swh/: __main__.py
swh.core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
swh/core/: api.py  api_async.py  cli.py  collections.py  config.py  constants.py  hashutil.py  json.py  logger.py  logging.py  nar.py  pytest_plugin.py  retry.py  scheduling.py  sentry.py  serializers.py  statsd.py  tarball.py  utils.py  worker.py
swh/core/api/: __init__.py  asynchronous.py  classes.py  gunicorn_config.py  negotiate.py  negotiation.py  serializers.py
swh/core/api/tests/: conftest.py  server_testing.py  test_api.py  test_async.py  test_classes.py  test_gunicorn.py  test_init.py  test_rpc_client.py  test_rpc_client_server.py  test_rpc_server.py  test_rpc_server_asynchronous.py  test_serializers.py
swh/core/cli/: __init__.py  backend.py  db.py  nar.py  sentry.py
swh/core/conf/: reader.py
swh/core/db/: __init__.py  common.py  db_utils.py  pytest_plugin.py
swh/core/db/sql/: 35-dbmetadata.sql  35-dbversion.sql  36-dbmodule.sql
swh/core/db/tests/: conftest.py  db_testing.py  test_cli.py  test_db.py  test_db_utils.py
swh/core/db/tests/data/: 0-schema.sql  README
swh/core/db/tests/data/cli/: 1-schema.sql  3-func.sql  4-data.sql
swh/core/db/tests/data/cli/sql/: 30-schema.sql  50-data.sql
swh/core/db/tests/data/cli/sql/upgrades/: 005-bis.sql  005.sql  006.sql
swh/core/db/tests/data/cli2/sql/: 50-data.sql
swh/core/db/tests/data/cli2/sql/upgrades/: 002.sql  004.sql
swh/core/db/tests/data/cli_new/sql/: 50-data.sql
swh/core/db/tests/data/cli_new/sql/upgrades/: 002.sql  003.sql
swh/core/db/tests/data/cli_new/upgrades/: 004.sql
swh/core/db/tests/data/postgresql/sql/upgrades/: 001.sql
swh/core/db/tests/data/test/cli2/sql/: 30-schema.sql
swh/core/db/tests/data/test/cli2/sql/upgrades/: 001.sql  003.sql  005-bis.sql  005.sql  006.sql
swh/core/db/tests/data/test/fail/sql/: 30-schema.sql
swh/core/db/tests/data/test/postgresql/sql/: 15-flavor.sql
swh/core/db/tests/pytest_plugin/: test_pytest_plugin.py
swh/core/db/tests/pytest_plugin/data/: 1-data.sql
swh/core/github/: pytest_plugin.py  utils.py
swh/core/github/tests/: test_github_utils.py  test_pytest_plugin.py
swh/core/s3/: downloader.py  pytest_plugin.py
swh/core/s3/tests/: test_downloader.py
swh/core/sql/: log-schema.sql
swh/core/tests/: __init__.py  conftest.py  db_testing.py  server_testing.py  test_api.py  test_cli.py  test_cli_backend.py  test_cli_nar.py  test_cli_sentry.py  test_collections.py  test_config.py  test_db.py  test_github_utils.py  test_hashutil.py  test_json.py  test_logger.py  test_logging.py  test_nar.py  test_pytest_plugin.py  test_reader.py  test_retry.py  test_scheduling.py  test_sentry.py  test_serializers.py  test_statsd.py  test_tarball.py  test_utils.py
swh/core/tests/data/: logging-config.yaml  sentry_expected_scheduler_tasks.csv
swh/core/tests/data/archives/: ca-certificates-20210603-1-any.pkg.tar.zst  groff-1.02.tar.Z  hello.tar  hello.tar.lz  hello.tar.x  hello.tbz2  hello.war  tokei-12.1.2.crate
swh/core/tests/data/archives/nar/: archive.nar.bz2  archive.nar.xz
swh/core/tests/data/https_common-lisp.net/: project_asdf_archives_asdf-3.3.5.lisp
swh/core/tests/data/https_example.com/: file.json  file.json,name=doe,firstname=jane
swh/core/tests/data/https_example.org/: test-executable.sh
swh/core/tests/data/https_sentry.softwareheritage.org/: api_0_issues_112726_events  api_0_issues_112726_events,cursor=0:100:0  api_0_issues_112726_events,full=true  api_0_issues_1_events,full=true
swh/core/tests/data/https_www.reference.com/: web,q=What+Is+an+Example+of+a+URL?,qo=contentPageRelatedSearch,o=600605,l=dir,sga=1
swh/core/tests/fixture/: conftest.py  test_pytest_plugin.py
swh/core/tests/fixture/data/https_example.com/: file.json
swh/tests/: test_hashlib.py
