[project]
name = "swh.core"
authors = [
    {name="Software Heritage developers", email="swh-devel@inria.fr"},
]

description = "Software Heritage core utilities"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools.packages.find]
include = ["swh.*"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.dynamic.optional-dependencies]
testing_core = {file = "requirements-test.txt"}
logging = {file = ["requirements-logging.txt"]}
db = {file = ["requirements-db.txt"]}
http = {file = "requirements-http.txt"}
# kitchen sink, please do not use
testing = {file = [
        "requirements-test.txt",
        "requirements-logging.txt",
        "requirements-http.txt",
        "requirements-db.txt"]}

[project.entry-points.console_scripts]
"swh" = "swh.core.cli:main"

[project.entry-points."swh.cli.subcommands"]
"swh.core.db" = "swh.core.cli.db"
"swh.core.backend" = "swh.core.cli.backend"
"swh.core.sentry" = "swh.core.cli.sentry"
"swh.core.nar" = "swh.core.cli.nar"

[project.entry-points.pytest11]
"pytest_swh_core" = "swh.core.pytest_plugin"

[project.urls]
"Homepage" = "https://gitlab.softwareheritage.org/swh/devel/swh-core"
"Bug Reports" = "https://gitlab.softwareheritage.org/swh/devel/swh-core/-/issues"
"Funding" = "https://www.softwareheritage.org/donate"
"Documentation" = "https://docs.softwareheritage.org/devel/swh-core/"
"Source" = "https://gitlab.softwareheritage.org/swh/devel/swh-core.git"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.1"

[tool.black]
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
force_sort_within_sections = true
known_first_party = ['swh']

[tool.mypy]
namespace_packages = true
warn_unused_ignores = true
explicit_package_bases = true
# ^ Needed for mypy to detect py.typed from swh packages installed
# in editable mode

plugins = []

# 3rd party libraries without stubs (yet)
[[tool.mypy.overrides]]
module = [
    "aiohttp_utils.*",
    "backports.entry_points_selectable.*",
    "systemd.*",
]
ignore_missing_imports = true

[tool.flake8]
select = ["C", "E", "F", "W", "B950"]
ignore = [
    "E203", # whitespaces before ':' <https://github.com/psf/black/issues/315>
    "E231", # missing whitespace after ','
    "E501", # line too long, use B950 warning from flake8-bugbear instead
    "W503", # line break before binary operator <https://github.com/psf/black/issues/52>,
    "E704", # multiple statements on one line (def)
]
max-line-length = 88
extend-exclude = ".git,.tox,.mypy_cache,build,dist"


[tool.pytest.ini_options]
norecursedirs = "build docs .*"
consider_namespace_packages = true
